# task-queue-api

./: .env.example  .gitignore  pyproject.toml
src/task_queue/: config.py  logging.py  main.py
src/task_queue/api/: deps.py  routes.py
src/task_queue/core/: store.py  worker.py
src/task_queue/handlers/: __init__.py  base.py  fail_task.py  fetch_url.py  multiply.py  sleep.py
src/task_queue/models/: schemas.py  task.py
