[project]
name = "task-queue-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task_queue"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"